tournament winner WIP change arraylist to list for testring II